added comments and made minor changes

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+     <!--Your standard contact page-->
      <head>
           <title> Contact Page</title> 
      </head>
@@ -17,6 +18,13 @@
                          <input type="submit" value="Send">
                     </form>
                </p>
+
+               <!--Links to social media-->
+               <div align="center">
+                    <h2>Follow Me on Social Media</h2>
+                    <a href="https://www.instagram.com/rachel.reyes24/nk" target="_blank">Instagram</a> |
+                    <a href="www.linkedin.com/in/rachel-reyes2" target="_blank">LinkedIn</a>
+               </div>
           </div>
      </body>
 </html>
