--- a/health.html
+++ b/health.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+     <!--This page acts almost as a blog page curated around some of the key things in my life-->
      <head>
           <title>Health and Wellness</title>
      </head>
