--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
             <p>A little about the outdoors, good reads, great food, fitness, and software engineering</p>
         </div>
         <div align="center">
+            <!-- Navigation links to the other html pages -->
             <a href="index.html">Home</a> |
             <a href="aboutMe.html">About Me</a> |
             <a href="contact.html">Contact</a> |
             <a href="project.html">Projects</a> |
             <a href="health.html">Health</a>
         </div>
+        <!--Links to social media-->
         <div align="center">
             <h2>Follow Me on Social Media</h2>
             <a href="https://www.instagram.com/rachel.reyes24/nk" target="_blank">Instagram</a> |
@@ -22,21 +24,21 @@
         </div>
         <div align="center">
             <h2>This is me!</h2>
+            <!--Personal Images and Video Embedded-->
             <div align="center">
                 <img src="./Photos/me.JPG" width="350" height="420" alt="Picture of me"/>
             </div>
             <br><br><br><br>
             <video width="640" height="360" controls>
-                <source src="./Photos/export_1696555614633(1).mp4" type="video/mp4">
-                Your browser does not support the video tag.
+                <source src="./Photos/export_1696555614633(1).mp4" type="video/mp4" alt="Video of random summer clips">
             </video>
             <br><br><br><br>
             <div align="center">
-                <img src="./Photos/rockymountainpic.JPG" width="350" height="420" alt="Picture of me"/>
+                <img src="./Photos/rockymountainpic.JPG" width="350" height="420" alt="Picture the rocky mountains through the view of a car window"/>
             </div>
             <br><br><br><br>
             <div align="center">
-                <img src="./Photos/88C71B99-4026-4BD4-8BB5-2838D395D929.jpg" width="350" height="420" alt="Picture of me"/>
+                <img src="./Photos/88C71B99-4026-4BD4-8BB5-2838D395D929.jpg" width="350" height="420" alt="Picture of bridge with trees around it in Washington"/>
             </div>
 
         </div>
