--- a/aboutMe.html
+++ b/aboutMe.html
@@ -13,6 +13,7 @@
         </div>
         <div>
             <h2>Hobbies</h2>
+            <!--Different bullet points of the my various different hobbies. Health and projects don't have pitures because they have their own html pages-->
             <ul>
                 <li><strong>Outdoors:</strong> I love exploring the beauties of nature through camping, mountain walks, and road trips with friends and family.<br>
                     <div align="center">
@@ -34,8 +35,9 @@
             </ul>
         </div>
         <div>
+            <!--Extra background of who i am-->
             <h2>Background</h2>
-            <p>I am a software engineering enthusiast with a love for combining creativity and logic to build impactful solutions. My journey so far has been enriched by a mix of personal projects, internships, and continuous learning.</p>
+            <p>I am a software engineering student with a love for combining creativity and logic to build impactful solutions while learning as much as I can personally and through my computer science career. My journey so far has been enriched by a mix of personal projects, internships, and continuous learning.</p>
         </div>
     </body>
 </html>
