--- a/project.html
+++ b/project.html
@@ -9,6 +9,7 @@
         </div>
 
         <div>
+            <!--Summaries of the places I've interned at along wth the links of what those places are in case someone was curious-->
             <h2 align="center">Internship Experience</h2>
             <ul>
                 <li>
@@ -48,7 +49,7 @@
 
         <div>
             <h2 align="center">Personal Projects</h2>
-
+            <!--This is a project I did but I haven't been able to put up a link, for right now, its a placeholder until I can find a way to host the project so that anyone can view it-->
             <ul>
                 <li>
                     <strong>Solar System</strong><br>
